--- a/erp-quimicos/src/main/webapp/vm/pocpedidos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/pocpedidos/startup.vm
@@ -56,6 +56,10 @@
 				<td width="100">Folio</td>
 				<td width="20"></td>
 				<td width="245">Cliente</td>
+				<td width="15"></td>
+				<td width="100">C&oacute;digo Producto</td>
+				<td width="15"></td>
+				<td width="180">Descripci&oacute;n Producto</td>
 				<td width="20">&nbsp;</td>
 				<td width="25"></td>
 				<td colspan="3">Fecha de creaci&oacute;n</td>
@@ -72,6 +76,10 @@
 				<td width="100"><input type="text" name="busqueda_folio" style="width:100px;"></td>
 				<td width="20"></td>
 				<td width="245"><input type="text" name="busqueda_cliente" style="width:245px;"></td>
+				<td width="15"></td>
+				<td width="100"><input type="text" name="busqueda_codigo" style="width:100px;"></td>
+				<td width="15"></td>
+				<td width="180"><input type="text" name="busqueda_producto" style="width:180px;"></td>
 				<td width="20">&nbsp;</td>
 				<td width="25"><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
 				<td width="90"><input type="text" name="busqueda_fecha_inicial" style="width:90px;" readOnly="true"></td>
