--- a/erp-quimicos/src/main/webapp/vm/clients/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/clients/startup.vm
@@ -42,23 +42,28 @@
 			</tr>
 			<tr>
 				<td width=10>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td>Buscar</td>
+				<td>No. Control</td>
 				<td width=10>&nbsp;&nbsp;</td>
-				<td><INPUT TYPE="text" name="cadena_buscar" style="width:200px;"></td>
+				<td>Razon Social</td>
 				<td width=10>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td>Filtro por</td>
+				<td>RFC</td>
 				<td width=10>&nbsp;&nbsp;</td>
-				<td>
-					<SELECT NAME="filtropor" style="width:150px;">
-						<!--
-							<option value="0">[-- Opcion busqueda --]</option>
-							<option value="1">No. de control</option>
-							<option value="2">RFC</option>
-							<option value="3">Razon social</option>
-							<option value="4">CURP</option>
-						-->
-					</SELECT>
-				</td>
+				<td></td>
+				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td></td>
+				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td ></td>
+				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+			</tr>
+			<tr>
+				<td width=10>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td><INPUT TYPE="text" name="busqueda_nocontrol" style="width:90px;"></td>
+				<td width=10>&nbsp;&nbsp;</td>
+				<td><INPUT TYPE="text" name="busqueda_razon_social" style="width:220px;"></td>
+				<td width=10>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td><INPUT TYPE="text" name="busqueda_rfc" style="width:150px;"></td>
+				<td width=10>&nbsp;&nbsp;</td>
+				<td></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td><INPUT TYPE="button" value="Buscar"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
