--- a/erp-quimicos/src/main/webapp/vm/prefacturas/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/prefacturas/startup.vm
@@ -53,9 +53,13 @@
 			</tr>
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<!--<td width="100">Factura</td>
-				<td width="20"></td>-->
-				<td width="245">Cliente</td>
+				<td width="200">Cliente</td>
+				<td width="15"></td>
+				<td width="100">C&oacute;digo Producto</td>
+				<td width="15"></td>
+				<td width="150">Nombre Producto</td>
+				<td width="15"></td>
+				<td width="150">Agente</td>
 				<td width="20">&nbsp;</td>
 				<td width="25"></td>
 				<td colspan="3">Fecha de creaci&oacute;n</td>
@@ -69,9 +73,17 @@
 			
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<!--<td width="100"><INPUT TYPE="text" name="busqueda_factura" style="width:100px;"></td>
-				<td width="20"></td>-->
-				<td width="245"><INPUT TYPE="text" name="busqueda_cliente" style="width:245px;"></td>
+				<td width="200"><INPUT TYPE="text" name="busqueda_cliente" style="width:200px;"></td>
+				<td width="15"></td>
+				<td width="100"><input type="text" name="busqueda_codigo" style="width:100px;"></td>
+				<td width="15"></td>
+				<td width="150"><input type="text" name="busqueda_producto" style="width:150px;"></td>
+				<td width="15"></td>
+				<td id="td_agente">
+					<select name="busqueda_select_agente" style="width:150px;">
+						<option value="0" selected="yes">[-Seleccionar Agente-]</option>
+					</select>
+				</td>
 				<td width="20">&nbsp;</td>
 				<td width="25"><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
 				<td width="90"><INPUT TYPE="text" name="busqueda_fecha_inicial" style="width:90px;" readOnly="true"></td>
@@ -184,7 +196,7 @@
 															<td width="120">
 																<input type="hidden" name="id_cliente" value="0">
 																<input type="hidden" name="id_df" value="1">
-																<INPUT TYPE="text" name="nocliente" style="width:120px;" readOnly="true">
+																<INPUT TYPE="text" name="nocliente" style="width:120px;">
 															</td>
 															<td width="15"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_rfccliente"></div></td>
 															<td width="90" align="right"><a href="busca_cliente">(Buscar&nbsp;cliente)</a></td>
@@ -198,7 +210,7 @@
 														<tr>
 															<td width="10"></td>
 															<td width="80">Razon&nbsp;Social</td>
-															<td colspan="8" width="405"><INPUT TYPE="text" name="razoncliente" style="width:420px;" readOnly="true"></td>
+															<td colspan="8" width="405"><INPUT TYPE="text" name="razoncliente" style="width:420px;"></td>
 														<tr><td colspan="10" height="5"></td></tr>
 														<tr>
 															<td width="10"></td>
