--- a/erp-quimicos/src/main/webapp/vm/repremisionfacturada/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/repremisionfacturada/startup.vm
@@ -38,10 +38,11 @@
 							<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 							<td width="200">Opciones</td>
 							<td width="20"></td>
-							<td width="100">Folio&nbsp;Remision</td>
+							<td width="100">Folio&nbsp;Remisi&oacute;n</td>
 							<td width="20"></td>
 							<!--<td width="245">Cliente</td>-->
-							<td width="245" class="cliente">Cliente &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="busca_cliente" style="font-size:13px;">(Buscar)</a></td>
+							<td width="245" class="cliente">Cliente</td>
+							<td width="60"></td>
 							<td width="20">&nbsp;</td>
 							<td width="25"></td>
 							<td colspan="3">Fecha&nbsp;de&nbsp;Remisi&oacute;n</td>
@@ -59,6 +60,7 @@
 							<td width="100"><input type="text" name="remision" style="width:100px;"></td>
 							<td width="20"></td>
 							<td width="245"><input type="text" name="cliente" style="width:245px;"></td>
+							<td width="60"><a href="busca_cliente" style="font-size:13px;">(Buscar)</a></td>
 							<td width="20">&nbsp;</td>
 							<td width="25"><img src="../../img/catalogo/calendario.png" align="top"></td>
 							<td width="90"><input type="text" name="fecha_inicial" style="width:90px;" readOnly="true"></td>
